# nba_dataloader

./: .gitignore  NBA Analytics.ipynb  README.md  pyproject.toml  requirements.txt
nba_dataloader/: client.py
notebooks/: NBA Analytics.ipynb
notebooks/request_params/: leaguedashplayerstats_params.py  leaguedashteamstats_params.py  playerdashboardbyyearoveryearcombined_params.py
request_params/: commonTeamYears_params.py  commonallplayers_params.py  leaguedashplayerstats_params.py  leaguedashteamstats_params.py  playerdashboardbyyearoveryearcombined_params.py  playerindex_params.py
src/nba_dataloader/: DataFetcher.py  __main__.py
tests/: DataFetcherNonRayTest.py
