[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nba_dataloader"
version = "1.0.0"
authors = [
  { name="Viddu Devigere", email="vdevigere@gmail.com" },
]
description = "A python client to query the various stats.nba.com resources"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vdevigere/nba_dataloader"
"Bug Tracker" = "https://github.com/vdevigere/nba_dataloader/issues"