[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nba_dataloader"
version = "1.0.5"
authors = [
  { name="Viddu Devigere", email="vdevigere@gmail.com" },
]
description = "A python client to query the various stats.nba.com resources"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]
dependencies =[
    "requests==2.31.0",
    "pandas==2.1.2",
    "ray==2.8.0",
    "deltalake==0.13.0"
]

[project.urls]
"Homepage" = "https://github.com/vdevigere/nba_dataloader"
"Bug Tracker" = "https://github.com/vdevigere/nba_dataloader/issues"
"Release Notes" = "https://github.com/vdevigere/nba_dataloader/releases"
"PyPi" = "https://pypi.org/project/nba-dataloader/"